# NFL-Sentiment-Analyzer

./: .coveragerc  .env.cloud.template  .env.example  .flake8  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CLOUD.md  DEVELOPMENT.md  Dockerfile  Dockerfile.cloud  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  file_structure_document.md  pyproject.toml  pytest.ini  railway.backend.json  railway.json  render.yaml  requirements-dev.txt  requirements.txt  start.sh  system_prompts_document.md  tech_stack_document.md
.github/workflows/: ci-cd.yml  ci.yml
.kiro/specs/frontend-test-infrastructure-improvements/: design.md  requirements.md
.kiro/specs/github-actions-optimization/: requirements.md
.kiro/specs/linting-configuration-improvements/: requirements.md
.kiro/specs/nfl-analyzer-improvements/: design.md  requirements.md  tasks.md
app/: main.py
app/api/: admin.py  analytics.py  api_keys.py  auth.py  data.py  docs.py  health.py  mlops.py  sentiment.py  websocket.py
app/core/: api_keys.py  config.py  data_ingestion_config.py  database.py  database_indexes.py  dependencies.py  exceptions.py  logging.py  middleware.py  monitoring.py  openapi.py  rate_limiting.py
app/models/: mlops.py  nfl.py  nfl_sentiment_config.py  responses.py  sentiment.py  user.py
app/scripts/: database_maintenance.py  init_sentiment_db.py
app/services/: analytics_service.py  caching_service.py  data_archiving_service.py  data_ingestion_service.py  data_processing_pipeline.py  database_migration_service.py  nfl_sentiment_engine.py  scheduled_tasks_service.py  sentiment_service.py
app/services/mlops/: README.md  __init__.py  hopsworks_service.py  huggingface_service.py  mlops_service.py  model_deployment_service.py  model_retraining_service.py  test_mlops_integration.py  wandb_service.py
docs/: README.md  TESTING.md  type-checking-todo.md
docs/architecture/: frontend.md
docs/development/: requirements.md
docs/project-instructions/: backend_structure_document.md  primary_task_list.md
docs/setup/: deployment.md  local-setup.md
frontend/: Dockerfile  Dockerfile.railway  index.html  nginx.conf  package-lock.json  package.json  railway.json  start.sh  tailwind.config.js  vite.config.ts
frontend/.claude/agents/: deployment-debugger.md
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: GamePredictionPanel.tsx  Layout.tsx  LoadingSpinner.tsx  Navbar.tsx  ProtectedRoute.tsx  RealTimeChart.tsx  SentimentDashboard.tsx  SessionTimeout.tsx  Sidebar.tsx  TeamSentimentCard.tsx
frontend/src/components/__tests__/: GamePredictionPanel.test.tsx  LoadingSpinner.test.tsx  Navbar.test.tsx  RealTimeChart.test.tsx  SentimentDashboard.test.tsx  TeamSentimentCard.test.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useSentimentWebSocket.ts  useWebSocket.ts
frontend/src/hooks/__tests__/: useWebSocket.test.ts  (+1 more)
frontend/src/pages/: AdminPanel.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts
frontend/src/test/: README.md  accessibility.test.tsx  setup.ts  utils.tsx  visual-regression.test.tsx
frontend/src/types/: jest-axe.d.ts
frontend/src/utils/: pwa.ts
monitoring/: alert_rules.yml  prometheus.yml  promtail-config.yml
nginx/: nginx.conf  nginx.prod.conf
scripts/: backup.sh  deploy.sh  mongo-init.js  restore.sh  run-tests.sh  security-scan.sh  setup-cron.sh  setup-secrets.sh  setup.sh  validate-test-setup.sh
tests/: README.md  README_api_documentation_monitoring_tests.md  README_data_ingestion_tests.md  README_data_storage_analytics_tests.md  README_deployment_tests.md  README_mlops_tests.md  README_sentiment_tests.md  conftest.py  run_api_documentation_monitoring_tests.py  run_deployment_tests.py  run_mlops_tests.py  test_admin_core.py  test_admin_endpoints.py  test_admin_integration.py  test_admin_mlops.py  test_admin_unit.py  test_analytics_integration.py  test_api_documentation_monitoring.py  test_api_documentation_monitoring_minimal.py  test_auth_endpoints.py  test_auth_integration.py  test_auth_middleware.py  test_auth_unit.py  test_config.py  test_data_ingestion_integration.py  test_data_ingestion_performance.py  test_data_ingestion_unit.py  test_data_storage_analytics.py  test_data_storage_enhancements.py  test_deployment_infrastructure.py  test_docker_builds.py  test_load_performance.py  test_main.py  test_mlops_config.py.disabled  test_mlops_data_drift.py.disabled  test_mlops_deployment.py  test_mlops_integration.py  test_mlops_validation.py  test_monitoring_validation.py  test_performance_large_datasets.py  (+7 more)
(+4 files in other folders)
